--- a/LdapSearch/App.xaml
+++ b/LdapSearch/App.xaml
@@ -1,13 +1,4 @@
 ﻿<Application x:Class="LdapSearch.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
-
-  <Application.Resources>
-    <Style x:Key="MyStyle" TargetType="{x:Type Control}">
-      <Setter Property="FontSize" Value="20" />
-      <Setter Property="FontFamily" Value="Calibri" />
-      <Setter Property="Background" Value="Silver" />
-    </Style>
-  </Application.Resources>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 </Application>
