--- a/LdapSearch/MainWindow.xaml
+++ b/LdapSearch/MainWindow.xaml
@@ -2,7 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wpf="clr-namespace:LdapSearch"
-        Title="LdapSearch" Height="600" Width="500" Style="{StaticResource MyStyle}" Icon="LdapSearch.ico">
+        Style="{DynamicResource MyStyle}" Title="LdapSearch" Height="600" Width="500" Icon="LdapSearch.ico">
+
+  <Window.Resources>
+    <Style x:Key="MyStyle" TargetType="{x:Type Control}">
+      <Setter Property="FontSize" Value="20" />
+      <Setter Property="FontFamily" Value="Calibri" />
+      <Setter Property="Background" Value="Silver" />
+    </Style>
+  </Window.Resources>
+    
   <Grid FocusManager.FocusedElement="{Binding ElementName=SearchTextBox}">
     <Grid.RowDefinitions>
       <RowDefinition Height="40" />
@@ -37,7 +46,4 @@
     <ListBox Grid.Row="2" Grid.Column="0" ItemsSource="{Binding SelectedUser.MemberOf}" Margin="5" />
     <Image Grid.Row="2" Grid.Column="1" Source="{Binding SelectedUser.Image}" VerticalAlignment="Top" Margin="5" />
   </Grid>
-  <Window.DataContext>
-    <wpf:MainWindowViewModel />
-  </Window.DataContext>
 </Window>
