--- a/MicroManager/MainWindow.xaml
+++ b/MicroManager/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="LdapSearch.MainWindow"
+﻿<Window x:Class="MicroManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:wpf="clr-namespace:LdapSearch"
-        Title="LdapSearch"
+        xmlns:wpf="clr-namespace:MicroManager"
+        Title="MicroManager"
         Width="500"
         Height="600"
-        Icon="LdapSearch.ico"
+        Icon="MicroManager.ico"
         Style="{DynamicResource MyStyle}">
 
   <Window.Resources>
@@ -51,8 +51,11 @@
       <ListBox.ItemTemplate>
         <DataTemplate>
           <StackPanel Orientation="Horizontal">
+            <CheckBox Content="{Binding Enabled}" />
             <Label Content="{Binding Name}" />
             <Label Content="{Binding State}" />
+            <Button Command="{Binding StartServiceCommand}" Content="Start" />
+            <Button Command="{Binding StopServiceCommand}" Content="Stop" />
           </StackPanel>
         </DataTemplate>
       </ListBox.ItemTemplate>
