--- a/MicroManager/MainWindow.xaml
+++ b/MicroManager/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="MicroManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:wpf="clr-namespace:MicroManager"
         Title="MicroManager"
         Width="500"
         Height="600"
@@ -10,7 +9,7 @@
 
   <Window.Resources>
     <Style x:Key="MyStyle" TargetType="{x:Type Control}">
-      <Setter Property="FontSize" Value="20" />
+      <Setter Property="FontSize" Value="16" />
       <Setter Property="FontFamily" Value="Calibri" />
       <Setter Property="Background" Value="Silver" />
     </Style>
@@ -19,32 +18,36 @@
   <Grid FocusManager.FocusedElement="{Binding ElementName=SearchTextBox}">
     <Grid.RowDefinitions>
       <RowDefinition Height="40" />
-      <RowDefinition Height="40" />
       <RowDefinition Height="*" />
+      <RowDefinition Height="40" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
-      <ColumnDefinition Width="100" />
     </Grid.ColumnDefinitions>
 
-    <TextBox Name="SearchTextBox"
-             Grid.Row="0"
-             Grid.Column="0"
-             Margin="5"
-             VerticalContentAlignment="Center"
-             Text="{Binding SearchString,
+    <Grid>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition />
+        <ColumnDefinition Width="100" />
+      </Grid.ColumnDefinitions>
+      <TextBox Name="SearchTextBox"
+               Grid.Row="0"
+               Grid.Column="0"
+               Margin="5"
+               VerticalContentAlignment="Center"
+               Text="{Binding SearchString,
                             UpdateSourceTrigger=PropertyChanged}">
-      <TextBox.InputBindings>
-        <KeyBinding Key="Enter" Command="{Binding SearchCommand}" />
-      </TextBox.InputBindings>
-    </TextBox>
-    <Button Grid.Row="0"
-            Grid.Column="1"
-            Margin="5"
-            Command="{Binding SearchCommand}"
-            Content="Search" />
-
-    <ListBox Grid.Row="2"
+        <TextBox.InputBindings>
+          <KeyBinding Key="Enter" Command="{Binding SearchCommand}" />
+        </TextBox.InputBindings>
+      </TextBox>
+      <Button Grid.Row="0"
+              Grid.Column="1"
+              Margin="5"
+              Command="{Binding SearchCommand}"
+              Content="Search" />
+    </Grid>
+    <ListBox Grid.Row="1"
              Grid.Column="0"
              Margin="5"
              ItemsSource="{Binding ServiceInfoViewModels}">
@@ -60,5 +63,20 @@
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
+    <Grid Row="2">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="100" />
+        <ColumnDefinition Width="100" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+      <Button Grid.Column="0"
+              Margin="5"
+              Command="{Binding StartServicesCommand}"
+              Content="Start all" />
+      <Button Grid.Column="1"
+              Margin="5"
+              Command="{Binding StopServicesCommand}"
+              Content="Stop all" />
+    </Grid>
   </Grid>
 </Window>
