--- a/MicroManager/MainWindow.xaml
+++ b/MicroManager/MainWindow.xaml
@@ -20,8 +20,13 @@
         <Setter.Value>
           <ControlTemplate TargetType="Button">
             <Grid Background="{TemplateBinding Background}">
-              <ContentPresenter />
+              <ContentPresenter Margin="1" />
             </Grid>
+            <ControlTemplate.Triggers>
+              <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Opacity" Value="0.9" />
+              </Trigger>
+            </ControlTemplate.Triggers>
           </ControlTemplate>
         </Setter.Value>
       </Setter>
@@ -88,11 +93,11 @@
           <StackPanel Orientation="Horizontal">
             <CheckBox Margin="0,0,10,0"
                       VerticalAlignment="Center"
-                      IsChecked="{Binding Enabled}"
-                      IsEnabled="{Binding IsEnabled}" />
+                      IsChecked="{Binding Included}" />
             <Button Background="{Binding Background}"
                     Command="{Binding StartStopToggleCommand}"
                     Content="{Binding Name}"
+                    IsEnabled="{Binding IsEnabled}"
                     Style="{StaticResource ToggleButtonStyle}" />
           </StackPanel>
         </DataTemplate>
