--- a/MicroManager/MainWindow.xaml
+++ b/MicroManager/MainWindow.xaml
@@ -85,17 +85,25 @@
              ItemsSource="{Binding ServiceInfoViewModels}">
       <ListBox.ItemTemplate>
         <DataTemplate>
-          <StackPanel Orientation="Horizontal" Height="25">
-            <CheckBox Margin="0,0,10,0"
+          <Grid>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="22" />
+              <ColumnDefinition Width="Auto" />
+              <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <CheckBox Grid.Column="0"
                       VerticalAlignment="Center"
                       IsChecked="{Binding Included}" />
-            <Button Background="{Binding Background}"
+            <Button Grid.Column="1"
+                    Background="{Binding Background}"
                     Command="{Binding StartStopToggleCommand}"
                     Content="{Binding Name}"
                     IsEnabled="{Binding IsEnabled}"
                     Style="{StaticResource ToggleButtonStyle}" />
-            <Label Content="{Binding Message}"/>
-          </StackPanel>
+            <Label Grid.Column="2"
+                   Content="{Binding Message}"
+                   ToolTip="{Binding Message}" />
+          </Grid>
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
