--- a/MicroManager/MainWindow.xaml
+++ b/MicroManager/MainWindow.xaml
@@ -5,7 +5,8 @@
         Width="500"
         Height="600"
         Icon="{Binding IconViewModel.ApplicationIcon}"
-        Style="{DynamicResource MyStyle}">
+        Style="{DynamicResource MyStyle}"
+        Topmost="{Binding TopMost}">
   <Window.Resources>
     <Style x:Key="MyStyle" TargetType="{x:Type Control}">
       <Setter Property="FontSize" Value="16" />
@@ -27,85 +28,107 @@
       </Setter>
     </Style>
   </Window.Resources>
-
-  <Grid FocusManager.FocusedElement="{Binding ElementName=SearchTextBox}">
+  <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="40" />
       <RowDefinition Height="*" />
-      <RowDefinition Height="40" />
+      <RowDefinition Height="30" />
     </Grid.RowDefinitions>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions>
-
-    <Grid>
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition />
-        <ColumnDefinition Width="100" />
-      </Grid.ColumnDefinitions>
-      <TextBox Name="SearchTextBox"
-               Grid.Row="0"
-               Grid.Column="0"
-               Margin="5"
-               VerticalContentAlignment="Center"
-               IsEnabled="{Binding IsEnabled}"
-               Text="{Binding SearchString,
-                              UpdateSourceTrigger=PropertyChanged}">
-        <TextBox.InputBindings>
-          <KeyBinding Key="Enter" Command="{Binding SearchCommand}" />
-        </TextBox.InputBindings>
-      </TextBox>
-      <Button Grid.Row="0"
-              Grid.Column="1"
-              Margin="5"
-              Command="{Binding SearchCommand}"
-              Content="Search"
-              IsEnabled="{Binding IsEnabled}" />
+    <Grid Grid.Row="0">
+      <Grid.LayoutTransform>
+        <ScaleTransform ScaleX="{Binding Scale}" ScaleY="{Binding Scale}" />
+      </Grid.LayoutTransform>
+      <Grid FocusManager.FocusedElement="{Binding ElementName=SearchTextBox}">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="40" />
+          <RowDefinition Height="*" />
+          <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid>
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="100" />
+          </Grid.ColumnDefinitions>
+          <TextBox Name="SearchTextBox"
+                   Grid.Row="0"
+                   Grid.Column="0"
+                   Margin="5"
+                   VerticalContentAlignment="Center"
+                   IsEnabled="{Binding IsEnabled}"
+                   Text="{Binding SearchString,
+                                  UpdateSourceTrigger=PropertyChanged}">
+            <TextBox.InputBindings>
+              <KeyBinding Key="Enter" Command="{Binding SearchCommand}" />
+            </TextBox.InputBindings>
+          </TextBox>
+          <Button Grid.Row="0"
+                  Grid.Column="1"
+                  Margin="5"
+                  Command="{Binding SearchCommand}"
+                  Content="Search"
+                  IsEnabled="{Binding IsEnabled}" />
+        </Grid>
+        <Grid Row="2">
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="*" />
+          </Grid.ColumnDefinitions>
+          <Button Grid.Column="0"
+                  Margin="5"
+                  Command="{Binding StartServicesCommand}"
+                  Content="Start all"
+                  IsEnabled="{Binding IsEnabled}" />
+          <Button Grid.Column="1"
+                  Margin="5"
+                  Command="{Binding StopServicesCommand}"
+                  Content="Stop all"
+                  IsEnabled="{Binding IsEnabled}" />
+        </Grid>
+        <ListBox Grid.Row="1"
+                 Grid.Column="0"
+                 Margin="5"
+                 ItemsSource="{Binding ServiceInfoViewModels}">
+          <ListBox.ItemTemplate>
+            <DataTemplate>
+              <Grid>
+                <Grid.ColumnDefinitions>
+                  <ColumnDefinition Width="22" />
+                  <ColumnDefinition Width="Auto" />
+                  <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <CheckBox Grid.Column="0"
+                          VerticalAlignment="Center"
+                          IsChecked="{Binding Included}" />
+                <Button Grid.Column="1"
+                        Background="{Binding Background}"
+                        Command="{Binding ToggleCommand}"
+                        Content="{Binding Name}"
+                        IsEnabled="{Binding IsEnabled}"
+                        Style="{StaticResource ToggleButtonStyle}" />
+                <Label Grid.Column="2"
+                       Content="{Binding Message}"
+                       ToolTip="{Binding Message}" />
+              </Grid>
+            </DataTemplate>
+          </ListBox.ItemTemplate>
+        </ListBox>
+      </Grid>
     </Grid>
-    <Grid Row="2">
+    <Grid Grid.Row="1">
       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="100" />
-        <ColumnDefinition Width="100" />
+        <ColumnDefinition Width="Auto" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
-      <Button Grid.Column="0"
+      <CheckBox Margin="5" IsChecked="{Binding TopMost}">Always on top</CheckBox>
+      <Slider Grid.Column="1"
               Margin="5"
-              Command="{Binding StartServicesCommand}"
-              Content="Start all"
-              IsEnabled="{Binding IsEnabled}" />
-      <Button Grid.Column="1"
-              Margin="5"
-              Command="{Binding StopServicesCommand}"
-              Content="Stop all"
-              IsEnabled="{Binding IsEnabled}" />
+              VerticalAlignment="Center"
+              Maximum="1.0"
+              Minimum="0.5"
+              Value="{Binding Scale}" />
     </Grid>
-    <ListBox Grid.Row="1"
-             Grid.Column="0"
-             Margin="5"
-             ItemsSource="{Binding ServiceInfoViewModels}">
-      <ListBox.ItemTemplate>
-        <DataTemplate>
-          <Grid>
-            <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="22" />
-              <ColumnDefinition Width="Auto" />
-              <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <CheckBox Grid.Column="0"
-                      VerticalAlignment="Center"
-                      IsChecked="{Binding Included}" />
-            <Button Grid.Column="1"
-                    Background="{Binding Background}"
-                    Command="{Binding ToggleCommand}"
-                    Content="{Binding Name}"
-                    IsEnabled="{Binding IsEnabled}"
-                    Style="{StaticResource ToggleButtonStyle}" />
-            <Label Grid.Column="2"
-                   Content="{Binding Message}"
-                   ToolTip="{Binding Message}" />
-          </Grid>
-        </DataTemplate>
-      </ListBox.ItemTemplate>
-    </ListBox>
   </Grid>
 </Window>
