--- a/MicroManager/MainWindow.xaml
+++ b/MicroManager/MainWindow.xaml
@@ -3,7 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MicroManager"
         Style="{DynamicResource MyStyle}"
-        Topmost="{Binding TopMost}">
+        Topmost="{Binding TopMost}"
+        WindowStyle="{Binding WindowStyle}">
+  <WindowChrome.WindowChrome>
+    <WindowChrome
+      CaptionHeight="0"
+      ResizeBorderThickness="5" />
+  </WindowChrome.WindowChrome>
   <Window.Resources>
     <Style x:Key="MyStyle" TargetType="{x:Type Control}">
       <Setter Property="FontSize" Value="16" />
