--- a/MicroManager/MainWindow.xaml
+++ b/MicroManager/MainWindow.xaml
@@ -4,7 +4,8 @@
         Title="MicroManager"
         Style="{DynamicResource MyStyle}"
         Topmost="{Binding TopMost}"
-        WindowStyle="{Binding WindowStyle}">
+        AllowsTransparency="True"
+        WindowStyle="None">
   <WindowChrome.WindowChrome>
     <WindowChrome
       CaptionHeight="0"
@@ -51,7 +52,22 @@
     </TaskbarItemInfo>
   </Window.TaskbarItemInfo>
   <Grid>
-    <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+    <DockPanel HorizontalAlignment="Right"
+               VerticalAlignment="Top">
+      <Button Width="15"
+              Height="15"
+              VerticalContentAlignment="Center"
+              HorizontalContentAlignment="Center"
+              Background="DarkGray"
+              Command="{Binding CloseCommand}"
+              Content="X"
+              FontSize="8"  FontWeight="Bold"/>
+    </DockPanel>
+    <Grid Grid.Row="1">
       <Grid.LayoutTransform>
         <ScaleTransform ScaleX="{Binding Scale}" ScaleY="{Binding Scale}" />
       </Grid.LayoutTransform>
@@ -141,7 +157,8 @@
         </Grid>
       </Grid>
     </Grid>
-    <Grid Height="50"
+    <Grid Grid.Row="1"
+          Height="50"
           Margin="20, 20, 20, 30"
           VerticalAlignment="Bottom"
           Background="DarkGray"
